--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,3 +15,5 @@ jobs:
           node-version: '16'
       - name: Install dependencies
         run: npm install
+      - name: Code Linting (with Fix)
+        run: npm run eslint -- --fix
