--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,10 @@ jobs:
         run: npm install
       - name: Code Linting (with Fix)
         run: npm run eslint -- --fix
+      - name: Build 
+        run: npm run build
+      - name: Run Tests 
+        run: npm test
+        
+        
+       
