add tag_release to workflow

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
       branches: [master]
       types: [opened, synchronize]
-      
+
 jobs: 
   simple_deployment_pipeline: 
     runs-on: ubuntu-20.04
@@ -25,6 +25,9 @@ jobs:
         run: npm run build
       - name: Run Tests 
         run: npm test
-        
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
        
